--- a/PHYS_220BL/lab_11/report.tex
+++ b/PHYS_220BL/lab_11/report.tex
@@ -34,10 +34,9 @@
 \end{table}
 \begin{itemize}
   \item[(a)] Measure the distance between the plates s = \F{\boxed{5.3~cm}}
-  \item[(b)] Graph \F{y~vs.~x^2}, include error bars. Measure the slope of the graph, slope =?
-  \item[] b
-  \item[(c)] From the slope, calculate the correction factor \F{F_D=?}
-  \item[] c
+  \item[(b)] Graph \F{y~vs.~x^2}, include error bars. Measure the slope of the graph, slope = \F{\boxed{0.0307}}
+  \item[] \includegraphics[scale=0.25]{graph.jpg}
+  \item[(c)] From the slope, calculate the correction factor \F{F_D=\boxed{0.023}}
 \end{itemize}
 \newpage
 \begin{table}[!htp]\centering
@@ -55,9 +54,13 @@ Sketch the path of the beam:\\
 \end{minipage}}
 \subsection*{11.6 Questions}
 \begin{enumerate}
-  \item Calculate the speed of the electron for the maximum voltage available for acceleration, in meters per seconds.
-  \item What fraction of the speed of light is this?
-  \item According to the special theory of relativity, the mass m of an object that is moving with velocity v with respect to an observer is larger than its rest mass \F{m_0}. The rest mass is the mass of the object when it is at rest. The equation that describes this phenomenon is \begin{center}\F{m=\frac{m_0}{\sqrt{1-\frac{v^2}{c^2}}}},\end{center} where \F{c=3.0\times10^8m/s} is the speed of light in vacuum. Evaluate the mass for the electrons in this experiment that are moving at v you calculated in 1. How much larger is this than \F{m_0}?
-  \item Compare your measured \F{e/m} from Thompsons Experiment to the known value, \F{1.76\times10^{11}C/kg}.
+  \item Calculate the speed of the electron for the maximum voltage available for acceleration, in meters per seconds.\\
+  \F{v=\sqrt{\frac{2qV}{m}}\rightarrow\sqrt{\frac{2\cdot(1.6\times{10}^{-19}\times{10}^3)\cdot(3.5)}{9.1\times{10}^{-31}}}=\boxed{3.51\times{10}^7~m/s}}
+  \item What fraction of the speed of light is this?\\
+  \F{\frac{v}{c}=\frac{3.51\times{10}^7}{3\times{10}^{-8}}=\boxed{0.117}}
+  \item According to the special theory of relativity, the mass m of an object that is moving with velocity v with respect to an observer is larger than its rest mass \F{m_0}. The rest mass is the mass of the object when it is at rest. The equation that describes this phenomenon is \begin{center}\F{m=\frac{m_0}{\sqrt{1-\frac{v^2}{c^2}}}},\end{center} where \F{c=3.0\times10^8m/s} is the speed of light in vacuum. Evaluate the mass for the electrons in this experiment that are moving at v you calculated in 1. How much larger is this than \F{m_0}?\\
+  \F{m=\frac{9.1\times{10}^{-31}}{\sqrt{1-\frac{{(3.51\times{10}^7)}^2}{{(3\times{10}^{-8})}^2}}}=\boxed{9.1629\times{10}^{-31} kg}\qquad \frac{m}{m_0}\rightarrow~\frac{9.1629\times{10}^{-31}}{9.1\times{10}^{-31}}=1.0069\rightarrow~\boxed{0.69\%~larger~than~m_0}}
+  \item Compare your measured \F{e/m} from Thompsons Experiment to the known value, \F{1.76\times10^{11}C/kg}.\\
+  \F{\frac{e}{m}=\frac{1.6\times{10}^{-19}}{9.1629\times{10}^{-31}}=\boxed{1.747\times{10}^{11}~C/kg}}
 \end{enumerate}
 \end{document}
