--- a/PHYS_220BL/lab_11/report.tex
+++ b/PHYS_220BL/lab_11/report.tex
@@ -19,24 +19,24 @@
 \begin{table}[!htp]\centering
   \begin{tabular}{|c|c|c|c|}\hline
     \multicolumn{4}{|c|}{\textbf{Table 2: Electron Deflection}}\\\hline
-    \F{X_{obs}}&\F{Y_{obs}}&Y&\F{F_D}\\\hline
-    8.3&-2.40, 2.35&2.38&-0.03\\\hline
-    8.0&-2.20, 2.05&2.13&-0.08\\\hline
-    7.3&-2.10, 1.45&1.78&-0.33\\\hline
-    7.0&-1.40, 1.35&1.38&-0.03\\\hline
-    6.3&-1.30, 1.25&1.28&-0.03\\\hline
-    6.0&-1.20, 1.15&1.18&-0.03\\\hline
-    5.3&-1.10, 1.10&1.10&0.00\\\hline
-    5.0&-0.50, 1.00&0.75&0.25\\\hline
-    4.3&-0.40, 0.50&0.45&0.05\\\hline
-    4.0&-0.30, 0.30&0.30&0.00\\\hline
+    \F{X_{obs}}&\F{Y_{obs}}&\F{Y}&\F{F_D}\\\hline
+    8.3&-2.40, 2.35&2.38&0.025\\\hline
+    8.0&-2.20, 2.05&2.13&0.075\\\hline
+    7.3&-2.10, 1.45&1.78&0.325\\\hline
+    7.0&-1.40, 1.35&1.38&0.050\\\hline
+    6.3&-1.30, 1.25&1.28&0.025\\\hline
+    6.0&-1.20, 1.15&1.18&0.025\\\hline
+    5.3&-1.10, 1.10&1.10&0.000\\\hline
+    5.0&-0.50, 1.00&0.75&0.250\\\hline
+    4.3&-0.40, 0.50&0.45&0.050\\\hline
+    4.0&-0.30, 0.30&0.30&0.000\\\hline
   \end{tabular}
 \end{table}
 \begin{itemize}
   \item[(a)] Measure the distance between the plates s = \F{\boxed{5.3~cm}}
-  \item[(b)] Graph \F{y~vs.~x^2}, include error bars. Measure the slope of the graph, slope = \F{\boxed{0.0307}}
+  \item[(b)] Graph \F{y~vs.~x^2}, include error bars. Measure the slope of the graph, slope = \F{\boxed{0.0326}}
   \item[] \includegraphics[scale=0.25]{graph.jpg}
-  \item[(c)] From the slope, calculate the correction factor \F{F_D=\boxed{0.023}}
+  \item[(c)] From the slope, calculate the correction factor \F{F_D=\boxed{0.687}}
 \end{itemize}
 \newpage
 \begin{table}[!htp]\centering
@@ -45,7 +45,7 @@
     \F{V_{PS} (kV)}&2.00&2.50&3.00&3.50\\\hline
     \F{I} (A)&0.18&0.23&0.28&0.33\\\hline
     \F{B} (T)&7.62e-4&9.73e-4&0.12e-2&0.14e-2\\\hline
-    \F{e/m} (C/kg)& & & & \\\hline
+    \F{e/m} (C/kg)&2.89e8&2.22e8&1.75e8&1.50e8\\\hline
   \end{tabular}
 \end{table}
 Sketch the path of the beam:\\
